--- a/mitx/lms/templates/header/user_dropdown.html
+++ b/mitx/lms/templates/header/user_dropdown.html
@@ -23,7 +23,7 @@ displayname = self.real_user.profile.name
 <div class="nav-item hidden-mobile nav-item-dropdown" tabindex="-1">
     <div class="toggle-user-dropdown" role="button" aria-label=${_("Options Menu")} aria-expanded="false" tabindex="0" aria-controls="user-menu">
         <span class="sr-only">${_("Dashboard for:")}</span>
-        <span class="username">${displayname}</span>
+        <span class="username">${username}</span>
         <span class="user-image-frame">
             <img src="${profile_image_url}"/>
         </span>
